# colcon-python-project-uv

./: README.md  README.rst  deps.repos  setup.cfg  setup.py  stdeb.cfg
colcon_python_project_uv/: activate.sh
colcon_python_project_uv/environment/: venvpath.py
colcon_python_project_uv/package_augmentation/: uv.py
colcon_python_project_uv/package_discovery/: uv_workspace.py
colcon_python_project_uv/package_identification/: uv.py  uv_workspace.py
colcon_python_project_uv/shell/: sh.py
colcon_python_project_uv/shell/template/: activate.sh.em
colcon_python_project_uv/subverb/: __init__.py  export.py  init.py  sync.py
colcon_python_project_uv/task/python/project/uv/: build.py
colcon_python_project_uv/verb/: venv.py
colcon_uv/package_augmentation/: uv.py
colcon_uv/package_discovery/: uv_workspace.py
colcon_uv/package_identification/: uv.py
colcon_uv/task/python/uv/: __init__.py  build.py
test/: test_flake8.py  test_spell_check.py
