[metadata]
name = colcon-python-project-uv
version = attr: colcon_python_project_uv.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/Briancbn/colcon-python-project-uv/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/Briancbn/colcon-python-project-uv/
author = Chen Bainian
author_email = chenbn@artc.a-star.edu.sg
maintainer = Chen Bainian
maintainer_email = chenbn@artc.a-star.edu.sg
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extensions for colcon to work with UV Python packages.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core>=0.12.0
  colcon-python-project>=0.0.0
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-python-project-uv
markers =
    flake8
    linter

[options.entry_points]
colcon_core.verb = 
  venv = colcon_python_project_uv.verb.venv:VenvVerb
colcon_core.environment =
  venvpath = colcon_python_project_uv.environment.venvpath:VenvPathEnvironment
colcon_python_project_uv.subverb = 
  init = colcon_python_project_uv.subverb.init:InitVenvSubverb
  sync = colcon_python_project_uv.subverb.sync:SyncVenvSubverb
colcon_core.package_discovery =
    python_project_uv_workspace = colcon_python_project_uv.package_discovery.uv_workspace:UVWorkspacePackageDiscovery
colcon_core.package_augmentation =
    python_project_uv = colcon_python_project_uv.package_augmentation.uv:UVPackageAugmentation
colcon_core.package_identification =
    python_project_uv = colcon_python_project_uv.package_identification.uv:UVPackageIdentification
    python_project_uv_workspace = colcon_python_project_uv.package_identification.uv_workspace:UVWorkspaceIdentification
colcon_core.task.build =
    python.project.uv = colcon_python_project_uv.task.python.project.uv.build:UVBuildTask

[flake8]
import-order-style = google

[coverage:run]
source = colcon_python_project_uv
